# MultiCameraDetectCaffe

./: CMakeLists.txt
include/: detector.h  floor.h  manager.h
src/: CMakeLists.txt  detection.cpp  detector.cpp  floor.cpp  manager.cpp
tests/: CMakeLists.txt  imgprocess.cpp  imgprocess.h  multiCameraDetect.cpp  pva_detect_test.cpp  skuDetect.cpp
